# GUI_HM_fit

./: .gitignore  GUI_interface_v3.py  GUI_interface_wxpy.py  LICENSE  LM_conc_algoritm.py  Methods.py  NMR_controls.py  NR_conc_algoritm.py  README.md  README_TAURI_FASTAPI.md  README_WX.md  Simulation_controls.py  Spectroscopy_controls.py  build_all.md  build_hmfit_vFinal.sh  build_windows.ps1  commit_backend_frontend.patch  core_ad_probe.py  corr_v1.00.patch  create_test_columns.py  errors.py  hmfit_confignmrT2.json  hmfit_pyside6.spec  hmfit_pyside6_entry.py  nmr_configT3.json  noncoop_utils.py  np_backend.py  org.hmfit.HMFit.yml  package-lock.json  requirements.txt  requirements_qt.txt  requirements_wx.txt  run_backend.sh  test_2_tit_RMN3.xlsx  test_backend.py  test_columns.xlsx  test_deps.py  test_imports.py  test_jax.py  utils.py
backend_fastapi/: config.py  main.py  nmr_processor.py  requirements.txt  spectroscopy_processor.py
docs/: ACID_BASE_POTENTIOMETRY.md  ARCHITECTURE.md
hmfit/: __init__.py
hmfit_core/: __init__.py  acid_base.py  acid_base_errors.py  acid_base_model_utils.py  api.py  exports.py  plots.py  potentiometry.py  run_acid_base.py  run_nmr.py  run_spectroscopy.py  runners.py
hmfit_gui_qt/: README.md  __init__.py  __main__.py  main.py  main_window.py  update_utils.py  version.py
hmfit_legacy_math/: NMR_controls_legacy.py  README.md  Spectroscopy_controls_legacy.py
hmfit_tauri/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
hmfit_tauri/src-tauri/: Cargo.toml  tauri.conf.json
hmfit_tauri/src-tauri/src/: main.rs
(+146 files in other folders)
