[package]
name = "hmfit-tauri"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = [ "custom-protocol", "fs-write-file", "dialog-save", "shell-open"] }
